--- a/.github/workflows/rubocop.yml
+++ b/.github/workflows/rubocop.yml
@@ -25,5 +25,5 @@ jobs:
           bundle install --jobs 4 --retry 3 --clean
       - name: Run rubocop with reviewdog
         env:
-          REVIEWDOG_GITHUB_API_TOKEN: $$ {{ secrets.GITHUB_TOKEN }}
+          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: bundle exec rubocop | reviewdog -reporter=github-pr-review -f=rubocop
