MYSQL_USER -> MYSQL_USERNAME

--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -35,7 +35,7 @@ jobs:
       # テストの実行
       - name: Run rspec
         env:
-          MYSQL_USER: root
+          MYSQL_USERNAME: root
           MYSQL_PASSWORD: root
           RAILS_ENV: github_action
           RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
