RSpec/LetSetup Enabled: false

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -82,6 +82,8 @@ RSpec/MultipleExpectations:
   Enabled: false
 RSpec/MultipleMemoizedHelpers:
   Enabled: false
+RSpec/LetSetup:
+  Enabled: false
 
 # Gemfile
 Bundler/OrderedGems:
