use secrets.DEFAULT_IMAGE_URL

--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -40,4 +40,5 @@ jobs:
           RAILS_ENV: github_action
           RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
           AUTHORIZATION_URL: ${{ secrets.AUTHORIZATION_URL }}
+          DEFAULT_IMAGE_URL: ${{ secrets.DEFAULT_IMAGE_URL }}
         run: bundle exec rspec --require rails_helper
